--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -13,6 +13,105 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    @import url(https://fonts.google.com/specimen/Figtree);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Figtree', sans-serif;
+}
+:root{
+    --Yellow: hsl(47, 88%, 63%);
+    --White: hsl(0, 0%, 100%);
+    --Grey: hsl(0, 0%, 50%);
+    --Black: hsl(0, 0%, 7%)
+}
+
+body{
+    background-color: var(--Yellow);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.container{
+    background-color: var(--White);
+    border-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 25%;
+    justify-content: space-around;
+    height: 540px;
+    border: 1px solid black;
+    align-items: center;
+    border-right: 8px solid;
+    border-bottom: 8px solid;
+}
+
+
+.image{
+    position: relative;
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    border-radius: 15px;
+}
+.img{
+    display: flex;
+    justify-content: center;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+span{
+    background-color: var(--Yellow);
+    width: calc(5em + 5px);
+    display: flex;
+    font-weight: 900;
+    text-align: center;
+    height: 30px;
+    align-items: center;
+    margin-bottom: 35px;
+    justify-content: center;
+}
+h1:hover{
+    color: var(--Yellow);
+    cursor: pointer;
+    transition: ease-in-out 0.5s;
+}
+
+.xl{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+.xl h5{
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+}
+@media screen and (max-width: 850px) {
+    .container {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .container {
+        width: 90%;
+    }
+}
   </style>
 </head>
 <body>
